# sver

./: .gitmodules  Cargo.toml  LICENSE  README.md  release.sh  renovate.json  sver.toml
.cargo/: config.toml
.github/actions/exec_sver/: action.yaml
.github/actions/setup_sver/: action.yaml
.github/actions/sver/: action.yaml
.github/workflows/: artifact.yaml  ci.yaml
doc/: Design.md  TODO.md
doc/blog/: blog.md
doc/blog/introduction/: blog.md  sver-actions.md  sver-inspect.md
src/: export.rs  filemode.rs  inspect.rs  lib.rs  main.rs  sver_config.rs  sver_repository.rs
src/cli/: args.rs  mod.rs  outputs.rs
testdata/cyclic1/: sver.toml
testdata/cyclic2/: sver.toml
testdata/invalid_config1/: sver.toml
testdata/invalid_config2/: sver.toml
testdata/lib2/: sver.toml
testdata/multiprofile1/: sver.toml
testdata/multiprofile2/: sver.toml
testdata/multiprofile3/: sver.toml
testdata/no_default/: sver.toml
testdata/no_default_ref/: sver.toml
testdata/service1/: sver.toml
testdata/service2/: sver.toml
testdata/symbolic2/: linked_dir
tests/: integration_test.rs  test_tool.rs
