[package]
edition = "2021"
name = "sver"
version = "0.1.20"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
git2 = "0.20.0"
libgit2-sys = { version = "0.18.0", features = ["vendored-openssl"] }
log = "0.4.21"
regex = "1.10.4"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
sha2 = "0.10.8"
toml = "0.9.0"
walkdir = "2.5.0"

[dependencies.uuid]
features = ["v7", "fast-rng", "macro-diagnostics"]
version = "1.8.0"

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.11.0"

[dev-dependencies]
chrono = "0.4.38"
