[package]
edition = "2021"
name = "sver"
version = "0.1.20"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
git2 = "0.20.2"
libgit2-sys = { version = "0.18.2", features = ["vendored-openssl"] }
log = "0.4.29"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sha2 = "0.10.9"
toml = "0.9.10"
walkdir = "2.5.0"

[dependencies.uuid]
features = ["v7", "fast-rng", "macro-diagnostics"]
version = "1.19.0"

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.11.0"

[dev-dependencies]
chrono = "0.4.42"
